--- a/style.css
+++ b/style.css
@@ -165,7 +165,8 @@ body {
 
 .hero {
   height: 100vh;
-  background: url('/images/hero-bg.webp') center/cover no-repeat;
+  background: url('https://shravzzv.github.io/razor/images/hero-bg.webp')
+    center/cover no-repeat;
   display: flex;
   justify-content: center;
   align-items: center;
